auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: auth-service
    spec:
      containers:
      - env:
        - name: JWT_SECRET
          value: supersecretkey
        - name: MONGO_URI
          value: mongodb://auth-db:27017/auth
        image: proiect-cc-1-auth-service
        imagePullPolicy: ""
        name: auth-service
        ports:
        - containerPort: 3001
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
