bookstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: bookstore
  name: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bookstore
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: bookstore
    spec:
      containers:
      - image: mongo
        imagePullPolicy: ""
        name: bookstore
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: bookstore-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: bookstore-data
        persistentVolumeClaim:
          claimName: bookstore-data
status: {}
