adminer-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  containers:
    - image: adminer:latest
      name: adminer
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  type: NodePort
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30004
