auth-db-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-users
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-users
  template:
    metadata:
      labels:
        app: mongo-users
    spec:
      containers:
        - name: mongo
          image: patriciaceausene/mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-users
  namespace: default
  labels:
    app: mongo-users
spec:
  selector:
    app: mongo-users
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
