auth-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-db
  name: auth-db
spec:
  ports:
  - name: "27018"
    port: 27018
    targetPort: 27017
  selector:
    io.kompose.service: auth-db
status:
  loadBalancer: {}
