auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: patriciaceausene/project-cc-bookstoreapp-auth-service:latest
          ports:
            - containerPort: 3001
              protocol: TCP
      hostname: auth-service
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
  type: NodePort
