bookstore-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore
  template:
    metadata:
      labels:
        app: bookstore
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore
  namespace: default
spec:
  selector:
    app: bookstore
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
