business-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: business-service
  name: business-service
spec:
  ports:
  - name: "3003"
    port: 3003
    targetPort: 3003
  selector:
    io.kompose.service: business-service
status:
  loadBalancer: {}
