business-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: business-service
  template:
    metadata:
      labels:
        app: business-service
    spec:
      containers:
        - name: business-service
          image: patriciaceausene/project-cc-bookstoreapp-business-service:latest
          ports:
            - containerPort: 3003
              protocol: TCP
      hostname: business-service
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: business-service
  namespace: default
spec:
  selector:
    app: business-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30003
  type: NodePort
