database-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: database-service
  name: database-service
spec:
  ports:
  - name: "3002"
    port: 3002
    targetPort: 3002
  selector:
    io.kompose.service: database-service
status:
  loadBalancer: {}
