mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-auth
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express-auth
  template:
    metadata:
      labels:
        app: mongo-express-auth
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-auth
  namespace: default
spec:
  selector:
    app: mongo-express-auth
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
