portainer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  type: NodePort
  selector:
    app: portainer
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30777
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      containers:
      - name: portainer
        image: portainer/portainer-ce:latest
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /data
          name: data
        securityContext:
          allowPrivilegeEscalation: false
      volumes:
      - name: data
        emptyDir: {}
